Fix country map alignment

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -217,6 +217,10 @@ nav {
   height: 400px;
 }
 
+.Country .map-lg {
+  margin-top: 3rem;
+}
+
 .section-sub--right--home {
   width: 22%;
   margin-left: 12%;
